# fpwe

./: .gitattributes  .gitignore  justfile  readme.md
.github/workflows/: build-rust.yml  ci-cd.yml  deploy-pages.yml  export-game.yml  godot.yml  rust.yml  web.yml
godot/: FPWE.gdextension  HelloWorld.gdextension  HelloWorld.gdextension.uid  export_presets.cfg  icon.svg.import  main.tscn  project.godot
godot/assets/: intro-spritesheet.png.import  logo.png.import  page1.jpg.import  page2.jpg.import
godot/assets/UI/: Background.png.import  ButtonClick.png.import  ButtonNormal.png.import  Screen.png.import  logo.png.import
godot/assets/audio/: credits.ogg.import  menu.ogg.import
godot/assets/music/: Stage0.ogg.import  Stage1.ogg.import  Stage2.ogg.import  menu.ogg.import  shift1.ogg.import  shift2.ogg.import
godot/gdscript/: company.gd  company.gd.uid  employee.gd  employee.gd.uid  global.gd  global.gd.uid  intro_cutscene.gd  intro_cutscene.gd.uid  sanity.gd  sanity.gd.uid
godot/scenes/: IntroCutscene.tscn  _state.tscn  credits.tscn  fired.tscn  game.tscn  give-up.tscn  intro.tscn  main.tscn  menu.tscn  page.tscn  shift.tscn
godot/script/: state.gd  state.gd.uid
rust/: .env.example  .gitignore  Cargo.toml  flake.nix  justfile  readme.md  rust-toolchain.toml
rust/src/: controls.rs  game.rs  helpers.rs  lib.rs  menu.rs  page.rs  player.rs  shift.rs
rust/src/page/: data.rs  mod.rs
rust/src/scenes/: credits.rs  fired.rs  give_up.rs  intro.rs  menu.rs  mod.rs  shift.rs
rust/src/shift/: data.rs  mod.rs  page.rs
rust/src/state/: data.rs  mod.rs  sanity.rs
(+288 files in other folders)
