[package]
name = "fpwe"
version = "0.1.0"
edition = "2024"

[features]
nothreads = ["godot/experimental-wasm-nothreads"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.2"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]
